[tool.poetry]
name = "prefect-threads"
version = "0.1.0"
description = ""
authors = ["Renan Santana <renan_ota@hotmail.com>"]
readme = "README.md"
packages = [{include = "prefect_threads"}]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "1.*"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
boto3 = "^1.26.74"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
